--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
             <h3>October<br>
                 <a href="speakers/brancaccio.html">David Brancaccio</a> <br>
                 <img src="brancaccio.png" alt="David Brancaccio" height="80">
+            </h3> <br>
+            <h3>November<br>
+                <a href="speakers/sorkin.html">Andrew Ross Sorkin</a> <br>
+                <img src="sorkin.png" alt="Andrew Ross Sorkin" height="80">
+            </h3>
+            <h3>January<br>
+                <a href="speakers/chua.html">Amy Chua</a> <br>
+                <img src="chua.png" alt="Amy Chua" height="80">
             </h3>
         </main>
         <footer>
